--- a/src/main/webapp/imcms/css/imcms-tabs.css
+++ b/src/main/webapp/imcms/css/imcms-tabs.css
@@ -6,7 +6,7 @@
     display: block;
     padding: 27px 35px;
     position: relative;
-
+    word-break: break-word;
 }
 
 .imcms-tabs__tab--disabled {
